[metadata]
name = mqtt-to-influx
summary = Collect mqtt data, apply type specific conversion and stuff that into an influx DB 
description-file = README.md
description-content-type = text/markdown; charset=UTF-8

author = Marcus Hardt
author-email = marcus@hardt-it.de

home-page = https://none
project_urls =
    Bug Tracker = https://none
    Documentation = https://none

license = MIT 
license_file = LICENSE

classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Utilities

[bdist_wheel]
universal = 1

[files]
packages =
    mqtt-to-influx

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
#
[upload_sphinx]
upload-dir = doc/build/html
